2006-01-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* docs/langspecs.txt :

	  - Updated to show new syntax.

2006-01-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf_agent.txt :
	* docs/bnf_policy.txt :

	  - Updated BNF to reflect actual parsers.

	* main/agent.l :

	  - Number is 1 to 127 digits.

	* lib/mapper.cpp :

	  - Fixed a nasty little bug in decode_fact() that seems to be ignored
	    by newer compilers.

	* samples/chwall.vla :
	* samples/chwall.vlp :
	* samples/docrel.vla :
	* samples/docrel.vlp :
	* samples/ground.vla :
	* samples/ground.vlp :

	  - New syntax.

	* lib/identifier.cpp :

	  - Function check_compat() now checks both types of identifiers:
	    entities and intervals.

	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Updated to use new API.

	* lib/polbase.cpp :
	* lib/polbase.h :
	* main/policy.y :

	  - Renamed add_tc() and close_rel() to add_tctab() and close_tctab().

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* main/agent.y :
	* main/policy.y :

	  - Removed unused and unmaintained debugging code.

	* Makefile.in :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.h :
	* lib/config.h.in :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/identifier.cpp :
	* lib/identifier.h :
	* lib/inttab.cpp :
	* lib/inttab.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/mapper.cpp :
	* lib/mapper.h :
	* lib/mem.cpp :
	* lib/mem.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/rel.cpp :
	* lib/rel.h :
	* lib/rlist.cpp :
	* lib/rlist.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/stringlistlist.cpp :
	* lib/stringlistlist.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/tnet.cpp :